--- a/src/components/application/styles/createApp.scss
+++ b/src/components/application/styles/createApp.scss
@@ -86,6 +86,14 @@
         }
     }
     .main {
+        .ant-layout-sider {
+            background: #242526;
+            border-right: 1px solid #555;
+        }
+        .ant-menu-dark,
+        .ant-menu-dark .ant-menu-sub {
+            background: #242526;
+        }
         flex-grow: 1;
         .line {
             display: block;
@@ -101,10 +109,53 @@
             position: relative;
             display: flex;
             height: 100%;
+            width: 100%;
+            .application_edit_page {
+                height: 100%;
+                width: 100%;
+                .empty-page {
+                    width: calc(100% - 58px);
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: #fff;
+                    position: relative;
+                }
+                .empty-title {
+                    margin-top: 40px;
+                    font-size: 18px;
+                    font-family: PingFang SC;
+                    font-weight: 400;
+                    color: #999;
+                }
+                .empty-btn {
+                    margin-top: 40px;
+                    width: 128px;
+                    height: 40px;
+                    line-height: 40px;
+                    text-align: center;
+                    border: 1px solid #ddd;
+                    background: #fff;
+                    font-family: PingFang SC;
+                    color: #0c0d0e;
+                    cursor: pointer;
+                }
+            }
             .left_drawer {
                 width: 100%;
                 height: 100%;
                 position: absolute;
+                .ant-drawer-body {
+                    padding: 0;
+                }
+                .ant-drawer-wrapper-body {
+                    height: 100%;
+                    .ant-drawer-body {
+                        height: 100%;
+                    }
+                }
             }
             .right_drawer {
                 width: 100%;
